--- a/ui/package.json
+++ b/ui/package.json
@@ -28,10 +28,11 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.1.0",
     "classlist.js": "^1.1.20150312",
+    "compass-sass-mixins": "^0.12.7",
     "core-js": "^2.5.7",
     "jquery": "^3.3.1",
     "material-design-icons-iconfont": "^3.0.3",
-    "mdbootstrap": "4.5.0",
+    "mdbootstrap": "4.5.6",
     "mobile-detect": "^1.4.1",
     "ng-inline-svg": "^7.0.1",
     "ng2-ace-editor": "^0.3.5",
